# transformer-algorithmic-generalization

./: README.md
synthetic_benchmark_suite/: README.md  pyproject.toml
synthetic_benchmark_suite/benchmark_generator/: __init__.py  addition.py  base.py  cli.py  composition.py  dataset.py  dyck.py  indexing.py  keyvalue.py  registry.py  sorting.py
synthetic_benchmark_suite/benchmark_generator/tasks/: __init__.py  addition.py  composition.py  dyck.py  indexing.py  keyvalue.py  sorting.py
synthetic_benchmark_suite/model/: attention.py  positional_encoding.py
